[gd_scene load_steps=11 format=3 uid="uid://dsr3vrh4sebyt"]

[ext_resource type="Script" uid="uid://cwdxhfxcqe84i" path="res://SnakeBrain.gd" id="1_baghe"]
[ext_resource type="Texture2D" uid="uid://cwvkhi00fwe7l" path="res://assets/sprites/Yılan1.png" id="2_gxkgb"]
[ext_resource type="Texture2D" uid="uid://2kg1qa5faugg" path="res://assets/sprites/Yılan2.png" id="3_2x2sd"]
[ext_resource type="AudioStream" uid="uid://bfb53quatms3r" path="res://assets/sounds/snake-hiss.wav" id="4_olj5u"]

[sub_resource type="Animation" id="Animation_dw1s1"]
resource_name = "Crawling"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Model:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [ExtResource("2_gxkgb"), ExtResource("3_2x2sd"), ExtResource("2_gxkgb")]
}

[sub_resource type="Animation" id="Animation_olj5u"]
resource_name = "Dying"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Model:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_ej4wj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Model:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_gxkgb")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Model:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xox5r"]
_data = {
&"Crawling": SubResource("Animation_dw1s1"),
&"Dying": SubResource("Animation_olj5u"),
&"RESET": SubResource("Animation_ej4wj")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2x2sd"]
size = Vector2(34, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ya8rp"]
size = Vector2(67, 15.25)

[node name="Snake" type="CharacterBody2D"]
script = ExtResource("1_baghe")

[node name="SightRay" type="RayCast2D" parent="."]
target_position = Vector2(-100, 0)

[node name="GroundRay" type="RayCast2D" parent="."]
target_position = Vector2(-45, 22)

[node name="Model" type="Sprite2D" parent="."]
position = Vector2(37.000008, 2.0000007)
scale = Vector2(0.058544304, 0.08121828)
texture = ExtResource("2_gxkgb")

[node name="Animator" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_xox5r")
}

[node name="HeadArea" type="Area2D" parent="."]
position = Vector2(-7, 0)

[node name="Head" type="CollisionShape2D" parent="HeadArea"]
position = Vector2(24, -4)
shape = SubResource("RectangleShape2D_2x2sd")

[node name="HitboxArea" type="Area2D" parent="."]
position = Vector2(-7, 0)

[node name="Hitbox" type="CollisionShape2D" parent="HitboxArea"]
position = Vector2(40, 2)
shape = SubResource("RectangleShape2D_ya8rp")

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(33.5, 2)
shape = SubResource("RectangleShape2D_ya8rp")

[node name="Mouth" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_olj5u")
